syntax = "proto3";

package query;

option go_package = "example.com/query";

service QueryService {
    //rpc QueryDatabase (SimpleQuery) returns (QueryResponse) {}
    rpc SingleQuery (CuckooBucketQuery) returns (CuckooBucketResponse) {}
    rpc ContinuousQuery (stream CuckooBucketQuery) returns (stream CuckooBucketResponse) {}
}

message SimpleQuery {
    int32 Index = 1;
}

message QueryResponse {
    int32 Value = 1;
}

message CuckooBucketQuery {
    uint64 BucketId = 1;
}

message CuckooBucketResponse {
    repeated uint64 Bucket = 1;
}